--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,13 @@
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
 </head>
-
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
 <body>
   <!-- Display a message if JS has been disabled on the browser. -->
   <noscript>If you're seeing this message, that means
